--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,13 +29,9 @@ jobs:
           name: INITIAL_RESEARCH_DOC
           path: ./initial_research/INITIAL_RESEARCH_DOC.pdf
 
-      - name: '📤 Upload Release Asset'
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1.0.2
+      - name: '📤 Upload Release Assets'
+        run: gh release upload --repo Unike267/Thesis --clobber $TAG $FILES
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: https://uploads.github.com/repos/Unike267/Thesis/releases/185890332/assets{?name,label}
-          asset_path: ./initial_research/INITIAL_RESEARCH_DOC.pdf
-          asset_name: INITIAL_RESEARCH_DOC.pdf
-          asset_content_type: docs/initial_research_doc
+          TAG: v0.1
+          FILES: ./initial_research/INITIAL_RESEARCH_DOC.pdf
